Update Tab styles to ensure full width and enhance text alignment

--- a/src/game_frontend/src/components/ui/Tab/index.css
+++ b/src/game_frontend/src/components/ui/Tab/index.css
@@ -1,3 +1,6 @@
 .tab-panel{
-    @apply border-t-2 border-white m-2 p-2;
+    @apply border-t-2 border-white m-2 p-2 w-full;
+}
+.tab{
+    @apply text-center font-coin min-h-[44px] min-w-[160px];
 }
